--- a/sensorValueService/.env.example
+++ b/sensorValueService/.env.example
@@ -1,3 +1,7 @@
 MQTT_HOST=mqtt://your.mqtt.host
 MQTT_TOPIC=your-topic
-MQTT_CLIENTID=your-client-id #this will be replaced later
+
+DB_USER=your-username
+DB_PASSWORD=your-password
+DB_HOST=your-host
+DB_DATABASE=your-db-name
