--- a/sensorValueService/package.json
+++ b/sensorValueService/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mqtt": "^4.3.7",
     "uuid": "^9.0.0"
